--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hapi/hapi": "^18.4.0",
     "@hapi/joi": "15.1.1",
     "mysql2": "^1.7.0",
+    "nodemon": "^1.19.4",
     "sequelize": "^5.21.1"
   }
 }
